# exposure

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  babel.cfg  delpoy.sh  deploy.sh  messages.mo  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docs/: README.md  architecture.md  code-quality-analysis.md  copilot-instructions-analysis.md  copilot-instructions-refactoring-summary.md  development.md  hosting.md  i18n-workflow.md  javascript-quality-analysis.md
docs/decisions/: 0001-templating.md  0002-type-checking.md  0003-dark-mode-styling-approach.md  0005-library-modernization.md  0007-flexible-layout-algorithm.md  0010-banner-cropping-approach.md  0012-blur-placeholder-strategy.md  008-image-preprocessing-approach.md
locales/: messages.pot
specs/001-frontend-polish/: spec.md
specs/001-image-gallery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-type-checking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-dark-mode-ui-polish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-apache-license/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-library-refactor-i18n/: plan.md  research.md  spec.md  tasks.md
specs/006-tool-rename-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-flexible-layout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-image-preprocessing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-gallery-banner/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-metadata-privacy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-mobile-fullscreen-performance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-frontend-polish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/generator/: __init__.py  assets.py  build_html.py  cache.py  constants.py  i18n.py  metadata_filter.py  model.py  scan.py  thumbnails.py  utils.py  yaml_sync.py
src/templates/: fullscreen.html.j2  index.html.j2  index.html.tpl
tests/accessibility/: __init__.py  axe_runner.sh  test_axe_a11y.py
tests/fixtures/: generate_test_images.py
tests/integration/: test_asset_budgets.py  test_banner.py  test_end_to_end.py  test_fullscreen.py  test_reproducibility.py
tests/unit/: test_assets.py  test_build_html.py  test_i18n.py  test_layout_algorithm.py  test_model.py  test_scan.py  test_thumbnails.py  (+1 more)
(+39 files in other folders)
