[project]
name = "fotoview"
version = "0.1.0"
description = "Static image gallery generator"
authors = [{name = "Hendrik Schawe", email = "hendrik.schawe@gmail.com"}]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pillow>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "pre-commit>=3.5",
    "playwright>=1.40",
    "pytest-playwright>=0.4.4",
    "axe-playwright-python>=0.1.4",
    "ty",
    "types-PyYAML>=6.0",
    "types-Pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "a11y: accessibility tests requiring playwright",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/integration/test_asset_budgets.py" = ["E501"]  # Allow long lines for budget reports
"tests/integration/test_reproducibility.py" = ["E501"]  # Allow long lines for subprocess calls

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.ty]
# Python version and environment configuration
[tool.ty.environment]
python-version = "3.11"
